welcome.lessons.welcome.array.basics.Array2.scala.code
var hauteur = getWorldHeight()

var tab = new Array[Color](hauteur)
	


def getColorColumn(){
	for(c <- 0 to hauteur-2){
		tab(c) = getCouleurSol()
		avance()
	}
	tab(hauteur - 1) = getCouleurSol()
	for(i <- 1 to hauteur - 1){
		recule()
	}
}

def setColorColumn(){
	var decal = litMessage().toInt
	for(c <- 0 to hauteur - 2){
		setCouleurBrosse((c+decal)%(hauteur))
		baisseBrosse()
		leveBrosse()
		avance()
	}
	setCouleurBrosse(((hauteur-1)+decal)%(hauteur))
		baisseBrosse()
		leveBrosse()
	for(i <- 1 to hauteur - 1){
		recule()
	}
}

override def run() {
	getColorColumn()
	for(r <- 1 to hauteur-1){
		gauche()
		avance()
		droite()
		setColorColumn()	
	}
}
